<resources>
    <string name="app_name">ReLife</string>
    <string name="agora_app_id">e2aadf0756a148e6870c4b2d053b591d</string>
    <string name="title_1">DevFest App</string>
    <string name="desc_1">App made for DevFest 2018 using the Agora SDK</string>
    <string name="enter_channel_name">Enter channel name</string>
    <string name="connect">Connect</string>
    <string name="two_way_audio_communication">Two-way audio communication</string>
    <string name="one_way_audio_communication">One-way audio communication</string>
    <string name="communication_type">Communication type</string>
    <string name="disconnect">Disconnect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="auth_email_text">Email</string>
    <string name="auth_password_text">Password</string>
    <string name="channelwide_broadcast">Channel-wide broadcast</string>
    <string name="emergency_channel">B261138E1F2DD8AA229593D4B498967BEA54A465AF92526EBAAE2735FCB7151F</string>

    <string-array name="admins">
        <item>jEPyptVyo6Zznrkh8FGzSRM5eOJ3</item>
        <item>XembuQ4rixaEgPOUXly0AB40rat1</item>
    </string-array>
</resources>
